{
    "name": "InputControls",
    "maps": [
        {
            "name": "Player",
            "id": "7411f252-3367-4da8-89cd-a0230d12f596",
            "actions": [
                {
                    "name": "MoveAction",
                    "type": "Value",
                    "id": "dd68c285-a3b1-4436-a24e-da31bd39b05f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateAction",
                    "type": "Value",
                    "id": "1da7fbcb-f253-4ca6-bd7e-b433fe98cd12",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "SW",
                    "id": "1529e2e3-f695-41bb-a79b-57551cf680b5",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveAction",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "f8f6cfe1-e3ab-44fe-9917-51531b865e33",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "01512e6f-287f-4345-8766-3bd84056781c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "AD",
                    "id": "4065c0d2-b09e-4973-a0a1-a4b655a3253e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateAction",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "5cab1a29-090a-43b7-b0d2-032047b54bea",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "12d51813-3b2c-43e4-9fe4-40bf610c147b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}